--- a/app/src/main/res/layout/activity_activitycrearviaje.xml
+++ b/app/src/main/res/layout/activity_activitycrearviaje.xml
@@ -60,6 +60,7 @@
         android:layout_marginRight="60dp"
         android:layout_marginBottom="5dp"
         android:clickable="true"
+        android:onClick="addtravel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
